<resources>
    <string name="app_name">WeBikeSD</string>
    <string name="tracking_notification_description">Tracking description</string>
    <string name="tracking_notification_content">Currently tracking</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="complete">Complete</string>
    <string name="cancel">Cancel</string>

    <!-- Monitor Fragment -->
    <string name="monitor_trip_field_value_default">n/a</string>
    <string name="monitor_trip_time_title">Total Time:</string>
    <string name="monitor_trip_speed_title">Speed:</string>
    <string name="monitor_trip_distance_title">Distance:</string>
    <string name="monitor_trip_status_title">Status:</string>
    <string name="monitor_trip_location_status_title">Location Status:</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Tracking Service -->

</resources>
