<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".views.dashboard.monitor.MonitorFragment">

    <Button
        android:id="@+id/fragment_tracking_start_trip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <Button
        android:id="@+id/fragment_tracking_pause_trip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pause" />

    <Button
        android:id="@+id/fragment_tracking_cancel_trip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/fragment_tracking_complete_trip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete" />

</LinearLayout>